# read-fonts-wasm

./: .editorconfig  .gitignore  Cargo.toml  README.md  animated.html  test.html
src/: lib.rs  main.rs
