[package]
name = "read-fonts-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
skrifa = "0.1.0"
wasm-bindgen = "0.2"
js-sys = "0.3.61"
woff2 = "0.3.0"

[patch.crates-io]
skrifa = { git="https://github.com/googlefonts/fontations.git", branch="main" }
woff2 = { git="https://github.com/yisibl/woff2-rs", branch="fix-total-compressed-size" }
