[package]
name = "use-skrifa"
version = "0.1.0"
edition = "2021"

[dependencies]
skrifa = "0.1.0"

# Various profiles for comparison purposes
# https://doc.rust-lang.org/cargo/reference/profiles.html#custom-profiles
[profile.release-lto]
inherits = "release"
lto = true

[profile.release-lto-abort]
inherits = "release"
lto = true
panic = 'abort'

[[bin]]
name = "use_skrifa"
path = "src/main.rs"